replace toplevel metadata.name to placeholders
Signed-off-by: Sakthi Sundaram <sakthisunda@yahoo.com>

--- a/tanzu/crs/v1.4.2/v1.4.2.yaml.template
+++ b/tanzu/crs/v1.4.2/v1.4.2.yaml.template
@@ -1516,7 +1516,7 @@ stringData:
     subjects:
     - kind: ServiceAccount
       name: kapp-controller-sa
-      namespace: __NAMESPACE_NAME__
+      namespace: tkg-system
 type: addons.cluster.x-k8s.io/resource-set
 ---
 apiVersion: v1
