Support multiple NIC for machines

--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachines.yaml
@@ -152,6 +152,13 @@ spec:
           spec:
             description: VCDMachineSpec defines the desired state of VCDMachine
             properties:
+              additionalOvdcNetworks:
+                description: AdditionalOvdcNetworks is the list of additional Ovdc
+                  Networks that are mounted to machines. VCDClusterSpec.OvdcNetwork
+                  is always attached regardless of this field.
+                items:
+                  type: string
+                type: array
               bootstrapped:
                 description: Bootstrapped is true when the kubeadm bootstrapping has
                   been run against this machine
