--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -1117,7 +1117,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch.56f1cc6
         livenessProbe:
           httpGet:
             path: /healthz
