--- a/examples/capi-quickstart.yaml
+++ b/examples/capi-quickstart.yaml
@@ -53,7 +53,7 @@ spec:
       name: capi-user-credentials # name of the secret containing the credentials of the VCD persona creating the cluster
       namespace: default # name of the secret containing the credentials of the VCD persona creating the cluster
   rdeId: "urn:vcloud:entity:vmware:capvcdCluster:UUID" # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
-  loadBalancer:
+  loadBalancerConfigSpec:
     vipSubnet: "" # Virtual IP CIDR for the external network
   executeWithoutRDE: false
 ---
@@ -71,7 +71,7 @@ spec:
       placementPolicy: tkgm-placement-policy # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
       storageProfile: "*" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       diskSize: 20Gi  # DiskSize is the size of VM storage
-      nvidiaGPU: false   # NvidiaGPU is true when a VM should be created with the relevant binaries installed. If true, then an appropriate placement policy should be set
+      enableNvidiaGPU: false   # NvidiaGPU is true when a VM should be created with the relevant binaries installed. If true, then an appropriate placement policy should be set
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
 kind: KubeadmControlPlane
