--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdclusters.yaml
@@ -171,9 +171,9 @@ spec:
                 - host
                 - port
                 type: object
-              loadBalancer:
-                description: LoadBalancer defines load-balancer configuration for
-                  the Cluster both for the control plane nodes and for the CPI
+              loadBalancerConfigSpec:
+                description: LoadBalancerConfig defines load-balancer configuration
+                  for the Cluster both for the control plane nodes and for the CPI
                 properties:
                   useOneArm:
                     type: boolean
@@ -188,7 +188,7 @@ spec:
                 type: string
               parentUid:
                 type: string
-              proxyConfig:
+              proxyConfigSpec:
                 description: ProxyConfig defines HTTP proxy environment variables
                   for containerd
                 properties:
@@ -204,6 +204,7 @@ spec:
               site:
                 type: string
               useAsManagementCluster:
+                default: false
                 type: boolean
               userContext:
                 properties:
@@ -284,6 +285,24 @@ spec:
                 type: array
               infraId:
                 type: string
+              loadBalancerConfig:
+                description: LoadBalancerConfig defines load-balancer configuration
+                  for the Cluster both for the control plane nodes and for the CPI
+                properties:
+                  useOneArm:
+                    type: boolean
+                  vipSubnet:
+                    type: string
+                type: object
+              org:
+                description: optional
+                type: string
+              ovdc:
+                description: optional
+                type: string
+              ovdcNetwork:
+                description: optional
+                type: string
               parentUid:
                 type: string
               proxyConfig:
@@ -307,15 +326,22 @@ spec:
                 description: Ready denotes that the vcd cluster (infrastructure) is
                   ready.
                 type: boolean
+              site:
+                description: optional
+                type: string
               useAsManagementCluster:
                 type: boolean
-              vappmetadataUpdated:
+              vappMetadataUpdated:
                 description: MetadataUpdated denotes that the metadata of Vapp is
                   updated.
                 type: boolean
             required:
+            - org
+            - ovdc
+            - ovdcNetwork
             - rdeVersionInUse
             - ready
+            - site
             type: object
         required:
         - spec
