--- a/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
+++ b/config/crd/bases/infrastructure.cluster.x-k8s.io_vcdmachinetemplates.yaml
@@ -119,8 +119,8 @@ spec:
                           this machine
                         pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                         x-kubernetes-int-or-string: true
-                      nvidiaGPU:
-                        description: NvidiaGPU is true when a VM should be created
+                      enableNvidiaGPU:
+                        description: EnableNvidiaGPU is true when a VM should be created
                           with the relevant binaries installed If true, then an appropriate
                           placement policy should be set
                         type: boolean
