--- a/infrastructure-vcd/v1.0.0/cluster-template.yaml
+++ b/infrastructure-vcd/v1.0.0/cluster-template.yaml
@@ -51,7 +51,7 @@ spec:
       name: capi-user-credentials # name of the secret containing the credentials of the VCD persona creating the cluster
       namespace: ${TARGET_NAMESPACE} # name of the secret containing the credentials of the VCD persona creating the cluster
   rdeId: ${VCD_RDE_ID} # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
-  loadBalancerConfigSpe:
+  loadBalancerConfigSpec:
     vipSubnet: ${IP_SUBNET} # Virtual IP CIDR for the external network
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
