--- a/infrastructure-vcd/v1.0.0/cluster-template.yaml
+++ b/infrastructure-vcd/v1.0.0/cluster-template.yaml
@@ -3,6 +3,13 @@ kind: Cluster
 metadata:
   name: ${CLUSTER_NAME}
   namespace: ${TARGET_NAMESPACE}
+  labels:
+    cluster-role.tkg.tanzu.vmware.com/management: ""
+    tanzuKubernetesRelease: ${TKR_VERSION}
+    tkg.tanzu.vmware.com/cluster-name: ${CLUSTER_NAME}
+  annotations:
+    osInfo: ubuntu,20.04,amd64
+    TKGVERSION: ${TKG_VERSION}
 spec:
   clusterNetwork:
     pods:
@@ -30,9 +37,9 @@ metadata:
   namespace: ${TARGET_NAMESPACE}
 type: Opaque
 data:
-  username: ${VCD_USERNAME} # username of the VCD persona creating the cluster. If system administrator is the user, please use 'system/administrator' as the username.
-  password: ${VCD_PASSWORD} # password associated with the user creating the cluster
-  refreshToken: ${VCD_REFRESH_TOKEN} # refresh token of the client registered with VCD for creating clusters. username and password can be left blank if refresh token is provided
+  username: ${VCD_USERNAME_B64} # username of the VCD persona creating the cluster. If system administrator is the user, please encode 'system/administrator' as the username.
+  password: ${VCD_PASSWORD_B64} # password associated with the user creating the cluster
+  refreshToken: ${VCD_REFRESH_TOKEN_B64} # refresh token of the client registered with VCD for creating clusters. username and password can be left blank if refresh token is provided
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDCluster
@@ -53,6 +60,9 @@ spec:
   rdeId: ${VCD_RDE_ID} # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
   loadBalancerConfigSpec:
     vipSubnet: ${IP_SUBNET} # Virtual IP CIDR for the external network
+  proxyConfigSpec:
+    http: ${PROXY_HTTP}
+    https: ${PROXY_HTTPS}
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
@@ -67,7 +77,7 @@ spec:
       sizingPolicy: ${VCD_CONTROL_PLANE_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_CONTROL_PLANE_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
       storageProfile: ${VCD_CONTROL_PLANE_STORAGE_PROFILE} # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
-      enableNvidiaGpu: ${ENABLE_NVIDIA_GPU}
+      # enableNvidiaGpu: ${ENABLE_NVIDIA_GPU} # No GPU config on control plane
       diskSize: ${DISK_SIZE}
 ---
 apiVersion: controlplane.cluster.x-k8s.io/v1beta1
@@ -96,7 +106,7 @@ spec:
     users:
       - name: root
         sshAuthorizedKeys:
-          - ${SSH_PUBLIC_KEY_B64} # ssh public key to log in to the control plane VMs in VCD
+          - ${SSH_PUBLIC_KEY} # ssh public key to log in to the control plane VMs in VCD
     initConfiguration:
       nodeRegistration:
         criSocket: /run/containerd/containerd.sock
@@ -145,7 +155,7 @@ spec:
       users:
         - name: root
           sshAuthorizedKeys:
-            - ${SSH_PUBLIC_KEY_B64} # ssh public key to log in to the worker VMs in VCD
+            - ${SSH_PUBLIC_KEY} # ssh public key to log in to the worker VMs in VCD
       joinConfiguration:
         nodeRegistration:
           criSocket: /run/containerd/containerd.sock
