--- a/infrastructure-vcd/v1.0.0/clusterctl.yaml
+++ b/infrastructure-vcd/v1.0.0/clusterctl.yaml
@@ -24,12 +24,16 @@ VCD_ORGANIZATION_VDC_NETWORK: "test_ovdc_nw"
 VCD_VIP_CIDR: 10.X.X.X/19
 
 # Variables specific to "clusterctl generate" only
-VCD_USERNAME: "vcduser"
-VCD_PASSWORD: "password"
-VCD_REFRESH_TOKEN: ""
+VCD_USERNAME_B64: "vcduser_encoded"
+VCD_PASSWORD_B64: "password_encoded"
+VCD_REFRESH_TOKEN_B64: ""
 VCD_CATALOG: "test_catalog"
 VCD_CONTROL_PLANE_SIZING_POLICY: "large_4core16gb"
+VCD_CONTROL_PLANE_STORAGE_PROFILE: "*"
+VCD_CONTROL_PLANE_PLACEMENT_POLICY: ""
 VCD_WORKER_SIZING_POLICY: "medium_2core8gb"
+VCD_WORKER_PLACEMENT_POLICY: ""
+VCD_WORKER_STORAGE_PROFILE:  "*"
 VCD_RDE_ID: "urn:vcloud:entity:vmware:capvcdCluster:UUID"
 CLUSTER_NAME: "myCluster"
 TARGET_NAMESPACE: default
@@ -40,6 +44,15 @@ TEMPLATE_NAME: ubuntu-2004-kube-v1.20.8+vmware.1-tkg.1-17589475007677388652
 ETCD_VERSION: v3.4.13_vmware.14
 DNS_VERSION: v1.7.0_vmware.12
 IP_SUBNET: "10.89.159.253/19"
-
-SSH_PUBLIC_KEY_B64: ""
-
+POD_CIDR: ""
+SERVICE_CIDR: ""
+TKR_VERSION: v1.20.8---vmware.1-tkg.2
+TKG_VERSION: v1.4.2
+HTTP_PROXY:  "http://USERNAME:PASSWORD@SERVER:PORT"
+HTTPS_PROXY:  "https://USERNAME:PASSWORD@SERVER:PORT"
+NO_PROXY:  ""
+ENABLE_NVIDIA_GPU: false
+PARENT_RDE_ID: vcdKE
+SSH_PUBLIC_KEY: ""
+DISK_SIZE: 20Gi
+WORKER_POOL_NAME: "work-pool-1"
