--- a/tanzu/crs/v1.4.3/v1.4.3.yaml.template
+++ b/tanzu/crs/v1.4.3/v1.4.3.yaml.template
@@ -1592,12 +1592,12 @@ stringData:
       metadata.yaml: |
         cluster:
           name: __CLUSTER_NAME__
-          type: management
+          type: workload
           plan: dev
           kubernetesProvider: VMware Tanzu Kubernetes Grid
           tkgVersion: v1.4.3
           infrastructure:
-            provider: vsphere
+            provider: cloud-director
         bom:
           configmapRef:
             name: tkg-bom
