--- a/examples/capvcd-standalone/minimum-capi.yaml
+++ b/examples/capvcd-standalone/minimum-capi.yaml
@@ -125,7 +125,7 @@ spec:
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
 kind: VCDMachineTemplate
 metadata:
-  name: testcluster-md0
+  name: testcluster-worker-pool-1
   namespace: default
 spec:
   template:
@@ -140,7 +140,7 @@ spec:
 apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
 kind: KubeadmConfigTemplate
 metadata:
-  name: testcluster-md0
+  name: testcluster-worker-pool-1
   namespace: default
 spec:
   template:
@@ -159,7 +159,7 @@ spec:
 apiVersion: cluster.x-k8s.io/v1beta1
 kind: MachineDeployment
 metadata:
-  name: testcluster-md0
+  name: testcluster-worker-pool-1
   namespace: default
 spec:
   clusterName: testcluster # name of the Cluster object
@@ -172,12 +172,12 @@ spec:
         configRef:
           apiVersion: bootstrap.cluster.x-k8s.io/v1beta1
           kind: KubeadmConfigTemplate
-          name: testcluster-md0 # name of the KubeadmConfigTemplate object
+          name: testcluster-worker-pool-1 # name of the KubeadmConfigTemplate object
           namespace: default # kubernetes namespace of the KubeadmConfigTemplate object. Should be the same namespace as that of the Cluster object
       clusterName: testcluster # name of the Cluster object
       infrastructureRef:
         apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
         kind: VCDMachineTemplate
-        name: testcluster-md0 # name of the VCDMachineTemplate object used to deploy worker nodes
+        name: testcluster-worker-pool-1 # name of the VCDMachineTemplate object used to deploy worker nodes
         namespace: default # kubernetes namespace of the VCDMachineTemplate object used to deploy worker nodes
       version: v1.21.8+vmware.1 # Kubernetes version to be used to create (or) upgrade the worker nodes. The value needs to be retrieved from the respective TKGm ova BOM.
