--- a/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
+++ b/infrastructure-vcd/v1.0.0/infrastructure-components.yaml
@@ -1163,7 +1163,7 @@ spec:
       containers:
       - command:
         - /opt/vcloud/bin/cluster-api-provider-cloud-director
-        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:main-branch.3536b23
+        image: harbor-repo.vmware.com/vcloud/cluster-api-provider-cloud-director:1.0.z.ea12a87
         livenessProbe:
           httpGet:
             path: /healthz
