--- a/examples/capvcd-standalone/minimum-capi-template.yaml
+++ b/examples/capvcd-standalone/minimum-capi-template.yaml
@@ -34,7 +34,7 @@ metadata:
 type: Opaque
 data:
   username: ${VCD_USERNAME_B64} # B64 encoded username of the VCD persona creating the cluster. If system administrator is the user, please encode 'system/administrator' as the username.
-  password: ${VCD_PASSWOD_B64} # B64 encoded password associated with the user creating the cluster
+  password: ${VCD_PASSWORD_B64} # B64 encoded password associated with the user creating the cluster
   refreshToken: ${VCD_REFRESH_TOKEN_B64} # B64 encoded refresh token of the client registered with VCD for creating clusters. password can be left blank if refresh token is provided
 ---
 apiVersion: infrastructure.cluster.x-k8s.io/v1beta1
