Update CRS labels to match template
Signed-off-by: lzichong <lzichong@vmware.com>

--- a/examples/capvcd-standalone/csi-crs/csi-crs.yaml
+++ b/examples/capvcd-standalone/csi-crs/csi-crs.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   clusterSelector:
     matchLabels:
-      csi: csi-crs 
+      csi: external
   resources:
   - kind: ConfigMap
     name: csi-controller-crs-cm
