--- a/examples/capvcd-standalone/cpi-crs/cloud-director-crs.yaml
+++ b/examples/capvcd-standalone/cpi-crs/cloud-director-crs.yaml
@@ -6,7 +6,7 @@ metadata:
 spec:
   clusterSelector:
     matchLabels:
-      cpi: cpi-crs
+      ccm: external
   resources:
   - kind: ConfigMap
     name: cloud-director-crs-cm
