--- a/examples/capvcd-standalone/cni-crs/antrea-crs.yaml
+++ b/examples/capvcd-standalone/cni-crs/antrea-crs.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   clusterSelector:
     matchLabels:
-      cni: ${CLUSTER_NAME}-crs-0
+      cni: antrea
   resources:
   - kind: ConfigMap
     name: antrea-crs-cm
