--- a/examples/capvcd-standalone/minimum-capi-template.yaml
+++ b/examples/capvcd-standalone/minimum-capi-template.yaml
@@ -3,7 +3,7 @@ kind: Cluster
 metadata:
   name: ${CLUSTER_NAME}
   labels:
-    cni: ${CLUSTER_NAME}-crs-0
+    cni: antrea
     ccm: external
     csi: external
 spec:
