--- a/templates/cluster-template-v1.20.8.yaml
+++ b/templates/cluster-template-v1.20.8.yaml
@@ -60,7 +60,6 @@ spec:
   rdeId: ${VCD_RDE_ID} # rdeId if it is already created. If empty, CAPVCD will create one for the cluster.
   loadBalancerConfigSpec:
     vipSubnet: ${IP_SUBNET} # Virtual IP CIDR for the external network
-    useOneArm: ${ENABLE_ONEARM}
   proxyConfigSpec:
     httpProxy: ${HTTP_PROXY}
     httpsProxy: ${HTTPS_PROXY}
@@ -78,7 +77,7 @@ spec:
       template: ${VCD_TEMPLATE_NAME} # Name of the template to be used to create (or) upgrade the control plane nodes
       sizingPolicy: ${VCD_CONTROL_PLANE_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_CONTROL_PLANE_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
-      storageProfile: ${VCD_CONTROL_PLANE_STORAGE_PROFILE} # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
+      storageProfile: "${VCD_CONTROL_PLANE_STORAGE_PROFILE}" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       # enableNvidiaGpu: ${ENABLE_NVIDIA_GPU} # No GPU config on control plane
       diskSize: ${DISK_SIZE}
 ---
@@ -108,7 +107,7 @@ spec:
     users:
       - name: root
         sshAuthorizedKeys:
-          - ${SSH_PUBLIC_KEY} # ssh public key to log in to the control plane VMs in VCD
+          - "${SSH_PUBLIC_KEY}" # ssh public key to log in to the control plane VMs in VCD
     initConfiguration:
       nodeRegistration:
         criSocket: /run/containerd/containerd.sock
@@ -142,7 +141,7 @@ spec:
       template: ${VCD_TEMPLATE_NAME} # Name of the template to be used to create (or) upgrade the worker nodes
       sizingPolicy: ${VCD_WORKER_SIZING_POLICY} # Sizing policy to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       placementPolicy: ${VCD_WORKER_PLACEMENT_POLICY} # Placement policy to be used for worker VMs (this must be pre-published on the chosen organization virtual datacenter)
-      storageProfile: ${VCD_WORKER_STORAGE_PROFILE} # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
+      storageProfile: "${VCD_WORKER_STORAGE_PROFILE}" # Storage profile to be used for the control plane VMs (this must be pre-published on the chosen organization virtual datacenter)
       enableNvidiaGpu: ${ENABLE_NVIDIA_GPU}
       diskSize: ${DISK_SIZE}
 ---
@@ -157,7 +156,7 @@ spec:
       users:
         - name: root
           sshAuthorizedKeys:
-            - ${SSH_PUBLIC_KEY} # ssh public key to log in to the worker VMs in VCD
+            - "${SSH_PUBLIC_KEY}" # ssh public key to log in to the worker VMs in VCD
       joinConfiguration:
         nodeRegistration:
           criSocket: /run/containerd/containerd.sock
