--- a/templates/clusterctl.yaml
+++ b/templates/clusterctl.yaml
@@ -13,7 +13,7 @@ cert-manager:
   url: "https://github.com/cert-manager/cert-manager/releases/latest/cert-manager.yaml"
 providers:
   - name: "vcd"
-    url: "~/go/cluster-api-provider-cloud-director/infrastructure-vcd/v1.0.0/infrastructure-components.yaml"
+    url: "~/go/cluster-api-provider-cloud-director/templates/infrastructure-components.yaml"
     type: "InfrastructureProvider"
 
 # Variables specific to both "cluster init" and "clusterctl generate"
@@ -40,12 +40,12 @@ TARGET_NAMESPACE: default
 CONTROL_PLANE_MACHINE_COUNT: 1
 WORKER_MACHINE_COUNT: 1
 KUBERNETES_VERSION: v1.20.8+vmware.1
-TEMPLATE_NAME: ubuntu-2004-kube-v1.20.8+vmware.1-tkg.1-17589475007677388652
+VCD_TEMPLATE_NAME: Ubuntu 20.04 and Kubernetes v1.21.8+vmware.1
 ETCD_VERSION: v3.4.13_vmware.14
 DNS_VERSION: v1.7.0_vmware.12
-IP_SUBNET: "10.89.159.253/19"
-POD_CIDR: ""
-SERVICE_CIDR: ""
+IP_SUBNET: "10.XX.XX.XX/19"
+POD_CIDR: "100.96.0.0/11"
+SERVICE_CIDR: "100.64.0.0/13"
 TKR_VERSION: v1.20.8---vmware.1-tkg.2
 TKG_VERSION: v1.4.2
 HTTP_PROXY:  "http://USERNAME:PASSWORD@SERVER:PORT"
@@ -56,3 +56,4 @@ PARENT_RDE_ID: vcdKE
 SSH_PUBLIC_KEY: ""
 DISK_SIZE: 20Gi
 WORKER_POOL_NAME: "work-pool-1"
+USE_AS_MANAGEMENT_CLUSTER: false
